cluster/apps/fullykioskbrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullykioskbrowser-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 2323
      targetPort: 2323
  type: ClusterIP
