cluster/apps/fullykioskbrowser/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fullykioskbrowser
  labels:
    app.kubernetes.io/name: fullykioskbrowser
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`fully.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: headers@file
        - name: local-only@file
      services:
        - name: fullykioskbrowser-svc
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
